build new jar, update source to newest version